k8s/mongo-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: todo-mongo
  labels:
    app: multi-services
    type: database

spec:
  serviceName: "todo-mongo-headless"
  replicas: 1
  selector:
    matchLabels:
      app: multi-services
      type: database
  template:
    metadata:
      labels:
        app: multi-services
        type: database
    spec:
      containers:
        - name: todo-mongo
          image: mongo:8.2.5-noble
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"

          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          volumeMounts:
            - name: mongo-data
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
