k8s/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: todo-backend
  labels:
    app: multi-services

spec:
  selector:
      app: multi-services
      type: backend
  ports:
    - port: 3000
      targetPort: 3000
