k8s/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: todo-frontend
  labels:
    app: multi-services

spec:
  selector:
      app: multi-services
      type: frontend
  ports:
    - port: 80
      targetPort: 80
