k8s/mongo-service-headless.yml
apiVersion: v1
kind: Service

metadata:
  name: todo-mongo-headless
  labels:
    app: multi-services

spec:
  clusterIP: None
  selector:
    app: multi-services
    type: database
  ports:
    - port: 27017
