k8s/mongo-service.yml
apiVersion: v1
kind: Service

metadata:
  name: todo-mongo
  labels:
    app: multi-services

spec:
  selector:
    app: multi-services
    type: database
  ports:
    - port: 27017
      targetPort: 27017
