k8s/redis-service-headless.yml
apiVersion: v1
kind: Service

metadata:
  name: todo-redis-headless
  labels:
    app: multi-services

spec:
  clusterIP: None
  selector:
    app: multi-services
    type: cache
  ports:
    - port: 6379
