k8s/ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: todo-backend
                port:
                  number: 3000
