k8s/ingress-frontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress-frontend
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend
                port:
                  number: 80
